SERVER-75022 Fix calls to sizeof in sort_key_generator.h